# RESONATE

./: .gitignore  AGENTS.md  docker-compose.yml  forge.config.js  index.html  package-lock.json  package.json  pyproject.toml  requirements-ml.txt  setup.sh  soniqLabs_ALL.html  soniqLabs_doublepeak.html  soniqLabs_lettermarks.html  soniqLabs_resonance.html  soniqLabs_wireframe.html  vite.config.js
backend/: .env.example  Dockerfile  app.py  batch_index.py  batch_trim.py  bridge.py  config.py  export_rpm_onnx.py  indexer.py  requirements.txt  server.py  server_original.py  state.py  train_rpm.py  train_rpm_phase_c.py  train_rpm_phase_d.py  utils.py
plugin/: CMakeLists.txt  build.sh
plugin/Source/: BridgeClient.cpp  BridgeClient.h  PluginEditor.cpp  PluginEditor.h  PluginProcessor.cpp  PluginProcessor.h
public/: icon.icns
tests/: conftest.py  test_ast_embeddings.py  test_batch_processor.py  test_bridge.py  test_candidate_generator.py  test_chart_intelligence.py  test_clap_embeddings.py  test_collections.py  test_core_descriptors.py  test_e2e_pipeline.py  test_embedding_manager.py  test_explanations.py  test_genre_era_classifier.py  test_harmonic_descriptors.py  test_ingestion.py  test_loop_detection.py  test_mix_analyzer.py  test_mix_eval.py  test_mix_profile.py  test_needs_engine.py  test_panns_embeddings.py  test_perceptual_descriptors.py  test_preference_dataset.py  test_preference_models.py  test_preference_serving.py  test_quality_scorer.py  test_recommendation_eval.py  test_reference_profiles.py  test_reranker.py  test_role_classifier.py  test_sample_eval.py  test_sample_profile.py  test_sample_store.py  test_spectral_descriptors.py  (+9 more)
(+160 files in other folders)
